; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6.c_ndcache_state2str.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_nd6.c_ndcache_state2str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"UNKNOWN\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"ND6_LLINFO_PURGE\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"ND6_LLINFO_NOSTATE\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c"ND6_LLINFO_INCOMPLETE\00", align 1
@.str.4 = private unnamed_addr constant [21 x i8] c"ND6_LLINFO_REACHABLE\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"ND6_LLINFO_STALE\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"ND6_LLINFO_DELAY\00", align 1
@.str.7 = private unnamed_addr constant [17 x i8] c"ND6_LLINFO_PROBE\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ndcache_state2str(i16 signext %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca i8*, align 8
  store i16 %0, i16* %2, align 2
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %4 = load i16, i16* %2, align 2
  %5 = sext i16 %4 to i32
  switch i32 %5, label %13 [
    i32 130, label %6
    i32 132, label %7
    i32 133, label %8
    i32 129, label %9
    i32 128, label %10
    i32 134, label %11
    i32 131, label %12
  ]

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %14

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %14

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %14

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %14

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %14

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %14

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %14

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %13, %12, %11, %10, %9, %8, %7, %6
  %15 = load i8*, i8** %3, align 8
  ret i8* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
